--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_crud_produtos
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.username=dev
+spring.datasource.password=123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
